feat: directory input as properties, notes on process

--- a/src/main/resources/directory-bot.properties
+++ b/src/main/resources/directory-bot.properties
@@ -1,1 +1,3 @@
 database.directory=/Users/coenraadhuman/Development/personal
+source.directory=/Users/coenraadhuman/Development/personal/directory-bot-test/a
+target.directory=/Users/coenraadhuman/Development/personal/directory-bot-test/b
