--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,5 +1,6 @@
 writer                = console
-level                 = info
+writer.level          = debug
+writer.stream         = out
 writer.format         = {date:yyyy-MM-dd HH:mm:ss} [{thread}] {class-name}:{line} {level} : {message}
 writingThread         = true
 bufferedWriting       = true
