--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'io.github.coenraadhuman'
-version = '1.0-SNAPSHOT'
+version = '0.0.1'
 
 repositories {
     mavenCentral()
@@ -33,7 +33,7 @@ application {
 shadowJar {
     archiveBaseName.set('directory-bot')
     archiveClassifier.set('')
-    archiveVersion.set('1.0')
+    archiveVersion.set(version)
 }
 
 tasks.withType(JavaCompile).configureEach {
