--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -12,8 +12,10 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -48,7 +50,7 @@ jobs:
             echo "==============================="
             echo "Replace version in build.gradle"
             echo "==============================="
-            sed -i '0, /version/s/version.*/version = "'$(echo $calculated_version)'"/' /app/build.gradle
+            sed -i "s/^version = '[^']*'/version = "\'$(echo $calculated_version)\'"/" build.gradle
             echo "Updated build.gradle with new version value."
 
             echo "=================="
