--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -30,6 +30,7 @@ jobs:
         run: ./gradlew build
 
       - name: Calculate Version
+        id: calculate_version
         uses: addnab/docker-run-action@v3
         with:
           image: ghcr.io/coenraadhuman/gib:latest
@@ -58,6 +59,11 @@ jobs:
             echo "=================="
             gib changelog -p /app > CHANGELOG.md
             echo "Updated CHANGELOG.md"
+            
+            echo "======================"
+            echo "Export version for tag"
+            echo "======================"
+            echo "version=$calculated_version" >> $GITHUB_OUTPUT
 
       - name: Commit Changes
         run: |
@@ -67,3 +73,8 @@ jobs:
           git add ./CHANGELOG.md
           git commit --amend --no-edit
           git push -f
+
+      - name: Create Git Tag
+        run: |
+          git tag v${{ steps.calculate_version.outputs.version }}
+          git push origin v${{ steps.calculate_version.outputs.version }}
