ci: fix auto tag creation

--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -83,5 +83,5 @@ jobs:
 
       - name: Create Git Tag
         run: |
-          git tag "v$VERSION"
-          git push origin "v$VERSION"
+          git tag "$VERSION"
+          git push origin "$VERSION"
