--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -82,6 +82,11 @@ jobs:
           git push -f
 
       - name: Create Git Tag
+        env:
+          TAG_TOKEN: ${{ secrets.TAG_TOKEN }}
         run: |
           git tag "$VERSION"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${TAG_TOKEN}@github.com/${{ github.repository }}
           git push origin "$VERSION"
