--- a/.github/workflows/publish-jar.yaml
+++ b/.github/workflows/publish-jar.yaml
@@ -10,8 +10,7 @@ env:
 
 jobs:
   build:
-    name: ${{ matrix.platform.os_name }} with Rust ${{ matrix.toolchain }} on target ${{ matrix.platform.target }}
-    runs-on: ${{ matrix.platform.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
