--- a/src/main/resources/directory-bot.properties
+++ b/src/main/resources/directory-bot.properties
@@ -2,3 +2,4 @@
 source.directory=/something/in/the/container
 target.directory=/something/in/the/container
 single.execution=false
+symlink.creation.avoid.valid.overwrite=true
