--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -82,15 +82,17 @@ jobs:
           git push -f
 
       - name: Create Git Tag
-        env:
-          TAG_TOKEN: ${{ secrets.TAG_TOKEN }}
         run: |
           if git rev-parse "$VERSION" >/dev/null 2>&1; then
             echo "Tag exists, skipping creation of it"
           else
             git tag "$VERSION"
-            git config user.name "GitHub Actions"
-            git config user.email "actions@github.com"
-            git remote set-url origin https://x-access-token:${TAG_TOKEN}@github.com/${{ github.repository }}
             git push origin "$VERSION"
           fi
+
+      - name: Trigger Repository Dispatch
+        run: |
+          curl -X POST https://api.github.com/repos/owner/repo/dispatches \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{"event_type":"trigger-release","client_payload":{"tag":"$VERSION"}}'
