--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -1,9 +1,8 @@
 name: Publish Docker Image
 
 on:
-  push:
-    tags:
-      -  '[0-9]+.[0-9]+.[0-9]+*'
+  repository_dispatch:
+    types: [trigger-release]
 
 jobs:
   push_to_registries:
@@ -13,8 +12,10 @@ jobs:
       packages: write
       contents: read
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+      - name: Checkout tag
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.client_payload.tag }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
