--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -94,7 +94,7 @@ jobs:
         env:
           TRIGGER_RELEASE: ${{ secrets.TRIGGER_RELEASE }}
         run: |
-          curl -X POST https://api.github.com/repos/owner/repo/dispatches \
+          curl -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
             -H "Authorization: token $TRIGGER_RELEASE" \
             -H "Accept: application/vnd.github.v3+json" \
             -d '{"event_type":"trigger-release","client_payload":{"tag":"$VERSION"}}'
