--- a/.github/workflows/update-version-changelog.yaml
+++ b/.github/workflows/update-version-changelog.yaml
@@ -97,4 +97,4 @@ jobs:
           curl -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
             -H "Authorization: token $TRIGGER_RELEASE" \
             -H "Accept: application/vnd.github.v3+json" \
-            -d '{"event_type":"trigger-release","client_payload":{"tag":"$VERSION"}}'
+            -d "{\"event_type\":\"trigger-release\",\"client_payload\":{\"tag\":\"$VERSION\"}}"
