--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       packages: write
       contents: read
+
     steps:
       - name: Checkout tag
         uses: actions/checkout@v4
@@ -20,26 +21,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log into Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log in to the Container Registry
+      - name: Log into the GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            coenraadhuman/directory-bot
-            ghcr.io/${{ github.repository }}
+      - name: Set Docker image tags
+        id: vars
+        run: |
+          TAG=${{ github.event.client_payload.tag }}
+          echo "TAG_NAME=${TAG#refs/tags/}" >> $GITHUB_ENV
+          echo "DOCKER_TAGS=coenraadhuman/directory-bot:latest,coenraadhuman/directory-bot:${TAG#refs/tags/}" >> $GITHUB_ENV
+          echo "GHCR_TAGS=ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${TAG#refs/tags/}" >> $GITHUB_ENV
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v5
@@ -47,5 +48,6 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ env.DOCKER_TAGS }}
+            ${{ env.GHCR_TAGS }}
