feat: improved docker image, filebot image, rename with bash script

--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -46,8 +46,28 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./src/docker/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.DOCKER_TAGS }}
             ${{ env.GHCR_TAGS }}
+
+      - name: Set Filebot Docker image tags
+        id: vars
+        run: |
+          TAG=${{ github.event.client_payload.tag }}
+          echo "TAG_NAME=${TAG#refs/tags/}" >> $GITHUB_ENV
+          echo "FILEBOT_DOCKER_TAGS=coenraadhuman/directory-bot:filebot-latest,coenraadhuman/directory-bot:filebot-${TAG#refs/tags/}" >> $GITHUB_ENV
+          echo "FILEBOT_GHCR_TAGS=ghcr.io/${{ github.repository }}:filebot-latest,ghcr.io/${{ github.repository }}:filebot-${TAG#refs/tags/}" >> $GITHUB_ENV
+
+      - name: Build and push Filebot Docker images
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./src/docker/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ env.FILEBOT_DOCKER_TAGS }}
+            ${{ env.FILEBOT_GHCR_TAGS }}
