feat: improved integration with filebot for media renames feature

--- a/src/main/resources/directory-bot.properties
+++ b/src/main/resources/directory-bot.properties
@@ -3,5 +3,7 @@ source.directory=/something/in/the/container
 target.directory=/something/in/the/container
 single.execution=false
 symlink.creation.avoid.valid.overwrite=true
-# Expecting a bash script which will return a single line output (rename absolute path) and is supplied with parameters as follows: filePath, sourceDirectory, targetDirectory
-rename.command=/config/rename-script.sh
+# Using Filebot to rename file:
+filebot.rename.enable=false
+filebot.skip.rename.failed.files=true
+filebot.rename.format={ plex.id }
