--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'io.github.coenraadhuman'
-version = '0.14.0'
+version = '0.15.0'
 
 repositories {
     mavenCentral()
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     // Database
     implementation 'org.jdbi:jdbi3-core:3.49.4'
+    implementation 'org.jdbi:jdbi3-sqlobject:3.49.4'
     implementation 'org.xerial:sqlite-jdbc:3.49.1.0'
     implementation 'org.flywaydb:flyway-core:11.8.2'
 
