--- a/src/main/resources/directory-bot.properties
+++ b/src/main/resources/directory-bot.properties
@@ -3,6 +3,7 @@ source.directory=/something/in/the/container
 target.directory=/something/in/the/container
 single.execution=false
 symlink.creation.avoid.valid.overwrite=true
+skip.file.extensions=.txt,.nfo,.DS_Store
 # Using Filebot to rename file:
 filebot.rename.enable=false
 filebot.skip.rename.failed.files=true
